# tf_neiss

./: .coveragerc  .travis.yml  CONTRIBUTING.rst  LICENSE.rst  Makefile  README.md  README.rst  REFACTORING.md  setup.cfg  setup.py
docs/: conf.py  cookiecutter_input.json  index.rst  installation.rst  usage.rst
docs/apidoc-template/: toc.rst_t
examples/triangles_2d/: generate_train_data_2d_triangle_TFR.py  graphs_2d.py  input_fn_generator_triangle2d.py  lav_triangle2d.py  model_fn_2dtriangle.py  python_test_triangle2d_full.py  test_triangle2d_full.sh  tfr_helper.py  trainer_triangle2d.py
input_fn/input_fn_2d/: input_fn_generator_rp2d.py  input_fn_generator_triangle2d.py
input_fn/input_fn_2d/data_gen_2dt/: generate_train_data_2d_polygon_TFR.py  generate_train_data_2d_star_polygon_TFR.py  generate_train_data_2d_triangle_TFR.py
input_fn/input_fn_2d/data_gen_2dt/data_gen_t2d_util/: polygone_2d_constructor.py  polygone_2d_helper.py  tf_polygon_2d_helper.py
input_fn/input_fn_nlp/: input_fn_as.py  input_fn_bert_lm.py  input_fn_bert_nsp.py  input_fn_bert_sop.py  input_fn_ner.py  input_fn_nlp_base.py  input_fn_pos.py  input_fn_pos_transformer.py  input_fn_tl.py
input_fn/input_fn_nlp/util_input_fn_nlp/: StringMapper.py
model_fn/: graph_base.py  model_fn_base.py
model_fn/model_fn_2d/: model_fn_2dtriangle.py  model_fn_polygon2d_classifier.py  model_fn_rp2d.py
model_fn/model_fn_2d/util_2d/: graphs_2d.py
model_fn/model_fn_nlp/: model_fn_as.py  model_fn_bert_lm.py  model_fn_bert_nsp.py  model_fn_bert_sop.py  model_fn_ner.py  model_fn_pos.py  model_fn_pos_transformer.py  model_fn_tl.py
model_fn/model_fn_nlp/util_nlp/: attention.py  graphs_as.py  graphs_bert_lm.py  graphs_bert_sop.py  graphs_ner.py  graphs_pos.py  graphs_tl.py  transformer.py
model_fn/model_fn_nlp/util_pos/: attention.py  graphs_pos.py  transformer.py
model_fn/util_model_fn/: custom_layers.py  losses.py  misc.py  optimizer.py
tests/: __init__.py  test_package.py  test_requierments.py
tests/workdir_triangle2d/: test_triangle2d_full.sh  test_triangle2d_gpu_full.sh
tf_neiss/: __init__.py  __main__.py  flags.py  graph_base.py  input_fn_base.py  lav_base.py  log.py  model_fn_base.py  trainer_base.py
tf_neiss/input_fn/input_fn_2d/: input_fn_generator_polygon2d.py
tf_neiss/input_fn/input_fn_2d/data_gen_2dt/: data_anaylzer.py  generate_train_data_2d_regular_polygon_TFR.py  generate_train_data_2d_triangle.py  generate_train_data_2d_triangle_TFR.py
tf_neiss/input_fn/input_fn_2d/data_gen_2dt/data_gen_t2d_util/: tfr_helper.py  triangle_2d_helper.py
tf_neiss/input_fn/input_fn_nlp/: input_fn_nlp_base.py  input_fn_pos_transformer.py
tf_neiss/model_fn/model_fn_2d/: model_fn_polygon2d.py
tf_neiss/model_fn/model_fn_2d/util_2d/: graphs_2d.py  graphs_rp2d.py
tf_neiss/model_fn/model_fn_nlp/: model_fn_pos_transformer.py
tf_neiss/model_fn/model_fn_nlp/util_nlp/: graphs_pos.py
tf_neiss/models/: keras_compatible_layers.py  layers.py  losses.py  optimizer.py  optimizers.py  transformation.py
tf_neiss/trainer/: lav_base.py  trainer_base.py
tf_neiss/trainer/trainer_types/trainer_2dt/: trainer_rp2d.py
tf_neiss/trainer/trainer_types/trainer_nlp/: trainer_pos_transformer.py  trainer_tl.py
tf_neiss/util/: io_helpers.py
trainer/: lav_base.py  trainer_base.py
trainer/lav_types/: lav_triangle2d.py
trainer/trainer_types/trainer_2dt/: trainer_polygon2d.py  trainer_polygon2d_classifier.py  trainer_rp2d.py  trainer_triangle2d.py
trainer/trainer_types/trainer_nlp/: trainer_as.py  trainer_bert_lm.py  trainer_bert_nsp.py  trainer_bert_sop.py  trainer_ner.py  trainer_pos.py  trainer_pos_transformer.py  trainer_tl.py
util/: list_helpers.py
util/tools/: split_train_val.py
